@@ -1,4 +1,4 @@
-		ksh 93u+m/1.0.5 vs. ksh 93u+
+		ksh 93u+m/1.0.9 vs. ksh 93u+
 
 The following is a list of changes between ksh 93u+ 2012-08-01 and the new
 ksh 93u+m reboot that could cause incompatibilities in rare corner cases.
@@ -180,17 +180,25 @@ For more details, see the NEWS file and for complete details, see the git log.
 33.	The -e option of test/[/[[ no longer returns true for pseudodevices
 	that are only supported by the shell and do not in fact exist in the
 	file system, such as /dev/tcp/*.
+	(Post-1.0 fix introduced in ksh 93u+m/1.0.4)
 
 34.	Single and double quotes now work like backslashes to quote '!', '^'
 	and '-' in bracket expressions in shell glob patterns, e.g., the glob
 	pattern ["!a-z"] now matches !, a, - or z and is no longer misparsed
 	as [!a-z]. This restores compatibility with ksh88 and non-ksh shells.
+	(Post-1.0 fix introduced in ksh 93u+m/1.0.4)
 
 35.	In the ${parameter/pattern/string} search-and-replace expansion, an
 	anchored empty pattern will now match the beginning or the end of the
 	string, so that ${parameter/#/string} will prefix the string to the
 	parameter value and ${parameter/%/string} will append it. Previously,
 	these operations were no-ops (equivalent to ${parameter}).
+	(Post-1.0 fix introduced in ksh 93u+m/1.0.5)
+
+36.	An assignment within an arithmetic expression no longer triggers both
+	of the variable's 'set' and 'get' discipline functions (if set). Only
+	the 'set' discipline is now triggered, as it was always documented.
+	(Post-1.0 fix introduced in ksh 93u+m/1.0.9)
 
 ____________________________________________________________________________
 
