@@ -2,7 +2,7 @@
 *                                                                      *
 *               This software is part of the ast package               *
 *          Copyright (c) 1982-2012 AT&T Intellectual Property          *
-*          Copyright (c) 2020-2022 Contributors to ksh 93u+m           *
+*          Copyright (c) 2020-2024 Contributors to ksh 93u+m           *
 *                      and is licensed under the                       *
 *                 Eclipse Public License, Version 2.0                  *
 *                                                                      *
@@ -196,11 +196,14 @@ struct Namval
 #define NV_UINT16P	(NV_LJUST|NV_UNSIGN|NV_SHORT|NV_INTEGER)
 #define NV_UINT16	(NV_UNSIGN|NV_SHORT|NV_INTEGER)
 #define NV_INT32	(NV_INTEGER)
-#define NV_UNT32	(NV_UNSIGN|NV_INTEGER)
+#define NV_UINT32	(NV_UNSIGN|NV_INTEGER)
 #define NV_INT64	(NV_LONG|NV_INTEGER)
 #define NV_UINT64	(NV_UNSIGN|NV_LONG|NV_INTEGER)
 #define NV_FLOAT	(NV_SHORT|NV_DOUBLE)
 #define NV_LDOUBLE	(NV_LONG|NV_DOUBLE)
+
+/* check/isolate all the bit flags used for numeric types */
+#define nv_isnum(np)	(nv_isattr(np,NV_INTEGER)?nv_isattr(np,NV_DOUBLE|NV_INTEGER|NV_LJUST|NV_LONG|NV_SHORT|NV_UNSIGN):0)
 
 /* name-value pair macros */
 #define nv_isattr(np,f)		((np)->nvflag & (f))
