@@ -2,6 +2,16 @@ This documents significant changes in the 1.0 branch of ksh 93u+m.
 For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
+2024-01-21:
+
+- A bug was fixed that caused both the 'set' and 'get'/'getn' discipline
+  functions of a variable to be triggered when performing an assignment in
+  an arithmetic expression; only the 'set' discipline is now triggered when
+  assigning (as was always the documented behaviour). This applies to the
+  shell's internal disciplines as well. For example, seeding the $RANDOM
+  generator via an arithmetic expression assignment now no longer takes the
+  first value away from the reproducible pseudorandom sequence.
+
 2024-01-16:
 
 - Fixed a parsing bug in array subscripts containing '=' in combination with
